# firebot-8wh4kt

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: backend.yml  security.yml  web.yml
blitzy/documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/docker/grafana/: grafana.ini
infrastructure/docker/prometheus/: prometheus.yml
infrastructure/k8s/: backend-deployment.yaml  configmaps.yaml  elk-deployment.yaml  grafana-deployment.yaml  ingress.yaml  network-policies.yaml  prometheus-deployment.yaml  redis-statefulset.yaml  secrets.yaml  service-mesh.yaml  storage-class.yaml  web-deployment.yaml
infrastructure/scripts/: backup-db.sh  deploy.sh  init-db.sh  monitor-health.sh  rollback.sh  rotate-keys.sh
infrastructure/terraform/: backend.tf  cloudfront.tf  ecs.tf  kms.tf  main.tf  monitoring.tf  outputs.tf  rds.tf  redis.tf  route53.tf  security.tf  variables.tf  versions.tf  vpc.tf  waf.tf
infrastructure/terraform/environments/dev/: terraform.tfvars
infrastructure/terraform/environments/prod/: terraform.tfvars
infrastructure/terraform/environments/staging/: terraform.tfvars
src/backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  pyproject.toml  requirements.txt  rust-toolchain.toml
src/backend/src/: lib.rs  main.rs
src/backend/src/api/: auth.rs  endpoints.rs  middleware.rs  mod.rs  routes.rs  websocket.rs
src/backend/src/config/: database.rs  environment.rs  logging.rs  mod.rs  security.rs
src/backend/src/data_collector/: drift.rs  jupiter.rs  market_data.rs  mod.rs  pump_fun.rs
src/backend/src/db/: mod.rs  models.rs  repositories.rs
src/backend/src/db/migrations/: V1__initial_schema.sql  V2__market_data_tables.sql  V3__strategy_tables.sql
src/backend/src/execution_engine/: error.rs  jito.rs  mod.rs  order_book.rs  position.rs  trade.rs
src/backend/src/models/: market.rs  mod.rs  order.rs  portfolio.rs  strategy.rs  trade.rs
src/backend/src/risk_manager/: limits.rs  mod.rs  portfolio.rs  validation.rs
src/backend/src/strategy_engine/: __init__.py  base.py
src/backend/src/strategy_engine/arbitrage/: __init__.py  detector.py  executor.py
src/backend/src/strategy_engine/grid/: __init__.py  calculator.py  manager.py
src/backend/src/strategy_engine/ml/: __init__.py  models.py  optimizer.py  predictor.py  trainer.py
src/backend/src/strategy_engine/risk/: __init__.py  calculator.py  manager.py
src/backend/src/utils/: crypto.rs  logger.rs  metrics.rs  mod.rs  solana.rs  time.rs
src/backend/tests/api/: test_auth.rs  test_endpoints.rs  test_websocket.rs
src/backend/tests/execution_engine/: test_order_book.rs  test_position.rs  test_trade.rs
src/backend/tests/integration/: test_data_collection.rs  test_strategy.rs  test_trading.rs
src/backend/tests/risk_manager/: test_limits.rs  test_portfolio.rs  test_validation.rs
src/backend/tests/strategy_engine/: test_arbitrage.py  test_grid.py  test_ml.py  test_risk.py
src/web/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  index.html  jest.config.ts  package.json  tsconfig.json  vite.config.ts
src/web/src/: App.tsx  index.tsx  vite-env.d.ts
src/web/src/api/: auth.ts  market.ts  portfolio.ts  strategy.ts  trading.ts  websocket.ts
src/web/src/config/: api.ts  chart.ts  theme.ts  trading.ts
src/web/src/constants/: api.ts  chart.ts  routes.ts  trading.ts
src/web/src/contexts/: AuthContext.tsx  ThemeContext.tsx  TradingContext.tsx  WebSocketContext.tsx
src/web/src/hooks/: useAuth.ts  useMarketData.ts  usePortfolio.ts  useStrategy.ts  useTheme.ts  useWebSocket.ts
src/web/src/pages/: Dashboard.tsx  Login.tsx  Portfolio.tsx  Settings.tsx  Strategy.tsx  Trading.tsx
src/web/src/services/: api.ts  auth.ts  market.ts  portfolio.ts  storage.ts  websocket.ts
src/web/src/styles/: charts.css  components.css  global.css  layout.css  (+1 more)
(+71 files in other folders)
