[tool.poetry]
name = "ai-trading-bot-backend"
version = "0.1.0"
description = "AI-Powered Solana Trading Bot Backend"
authors = ["Trading Bot Team"]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.0"
tensorflow = "^2.13.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
fastapi = "^0.100.0"
prometheus-client = "^0.17.0"
python-jose = "^3.3.0"
pydantic = "^2.0.0"
httpx = "^0.24.0"
asyncio = "^3.4.3"
websockets = "^15.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.0"
alembic = "^1.11.0"
psycopg2-binary = "^2.9.0"
redis = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
black = "^23.0.0"
mypy = "^1.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.0"
safety = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "src/backend/src"

[tool.pytest]
testpaths = ["src/backend/tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/backend/src --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true